--- a/index.html
+++ b/index.html
@@ -1,34 +1,210 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-    <title>Coral Restoration</title>
+  <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <title>Coral Restoration</title>
+      <meta name="author" content=" " />
+      <meta name="description" content=" " />
+      <meta name="keywords"  content=" " />
+      <meta name="Resource-type" content="Document" />
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald" />
-
-</head>
-<body>
-
-<div class="container ">
-
-</div>
-
-<!-- Load Libraries -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+      <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
+      <link rel="stylesheet" type="text/css" href="css/main.css" />
+      <link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
+      <link rel="stylesheet" type="text/css" href="css/slick.css"/>
 
 
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+      <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-</body>
+      <script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
+      <script type="text/javascript" src="js/jquery.fullPage.js"></script>
+
+
+      <script type="text/javascript">
+          $(document).ready(function() {
+              $('#fullpage').fullpage({
+                  menu: '#menu',
+                  anchors: ['intro', 'what', 'types', 'rainforest', 'benefits', 'threats', 'restoration'],
+                  sectionsColor: ['#eeeeee', '#dddddd', '#eeeeee', '#dddddd', '#eeeeee', '#dddddd', '#eeeeee'],
+                  autoScrolling: false,
+                  fitToSection: false
+              });
+          });
+
+          $(function() {
+           $( "#tabs" ).tabs();
+          });
+
+      </script>
+
+  </head>
+
+  <body>
+
+
+    <ul id="menu">
+        <li data-menuanchor="intro" class="active"><a href="#intro">Intro</a></li>
+        <li data-menuanchor="what"><a href="#what">About Coral</a></li>
+        <li data-menuanchor="types"><a href="#types">Types of Coral</a></li>
+        <li data-menuanchor="rainforest"><a href="#rainforest">Rainforests of the Sea</a></li>
+        <li data-menuanchor="benefits"><a href="#benefits">Benefits</a></li>
+        <li data-menuanchor="threats"><a href="#threats">Threats</a></li>
+        <li data-menuanchor="restoration"><a href="#restoration">Restoration</a></li>
+    </ul>
+
+    <div id="fullpage">
+        <div class="section " id="section0">
+          <div class="slide" id="slide1">
+            <div id="image_slider">
+              <img class="reef_slider" src="images/coral_reef_bw.jpg">
+              <img class="reef_slider" src="images/coral_reef_color.jpg">
+            </div>
+          </div>
+          <div class="slide" id="slide2">
+            <h1>Second Header Here</h1>
+          </div>
+          <div class="slide" id="slide3">
+            <h1>Coral Restoration</h1>
+            <a href="#restoration" class=button>Learn More</a>
+          </div>
+        </div>
+
+
+        <div class="section" id="section1">
+
+          <h1>What is a coral?</h1>
+          <p>
+              "Corals actually comprise an ancient and unique partnership, called symbiosis, that benefits both animal and plant life in the ocean. Corals are animals, though, because they do not make their own food, as plants do. Corals have tiny, tentacle-like arms that they use to capture their food from the water and sweep into their inscrutable mouths.
+          </p>
+          <p>
+              Most structures that we call "coral" are, in fact, made up of hundreds to thousands of tiny coral creatures called polyps. Each soft-bodied polyp—most no thicker than a nickel—secretes a hard outer skeleton of limestone (calcium carbonate) that attaches either to rock or the dead skeletons of other polyps." http://oceanservice.noaa.gov/facts/coral.html
+          </p>
+
+        </div>
+        <div class="section" id="section3">
+          <h1>Species of Coral</h1>
+            <div class="coral_types">
+              <div>
+                <img src="images/blank.jpg">
+                <h2>Staghorn</h2>
+                <p>Info about coral species here</p>
+              </div>
+              <div>
+                <img src="images/blank.jpg">
+                <h2>Elkhorn</h2>
+                <p>Info about coral species here</p>
+              </div>
+              <div>
+                <img src="images/blank.jpg">
+                <h2>Mustard Coral</h2>
+                <p>Info about coral species here</p>
+              </div>
+              <div>
+                <img src="images/blank.jpg">
+                <h2>Staghorn</h2>
+                <p>Info about coral species here</p>
+              </div>
+              <div>
+                <img src="images/blank.jpg">
+                <h2>Staghorn</h2>
+                <p>Info about coral species here</p>
+              </div>
+              <div>
+                <img src="images/blank.jpg">
+                <h2>Staghorn</h2>
+                <p>Info about coral species here</p>
+              </div>
+            </div>
+        </div>
+        <div class="section" id="section4">
+          <h1>The Rainforests of the Sea</h1>
+        </div>
+
+        <div class="section" id="section5">
+          <h1>Benefits of Coral</h1>
+          <div class="benefits">
+            <img src="images/blank.jpg">
+            <h2>Tourism</h2>
+            <p>Info about benefit here</p>
+          </div>
+          <div class="benefits">
+            <img src="images/blank.jpg">
+            <h2>Coastal Protection</h2>
+            <p>Info about benefit here</p>
+          </div>
+          <div class="benefits">
+            <img src="images/blank.jpg">
+            <h2>Fisheries</h2>
+            <p>Info about benefit here</p>
+          </div>
+          <div class="benefits">
+            <img src="images/blank.jpg">
+            <h2>Biodiverity</h2>
+            <p>Info about benefit here</p>
+          </div>
+
+        </div>
+        <div class="section" id="section6">
+          <h1>Threats to Coral</h1>
+          <div id="tabs">
+
+            <div class="threat_content" id="tabs-1">
+              <img src="images/blank.jpg">
+              <h2>Over Fishing</h2>
+              <p>Info about benefit here</p>
+            </div>
+            <div class="threat_content" id="tabs-2">
+              <img src="images/blank.jpg">
+              <h2>Pollution</h2>
+              <p>Info about benefit here</p>
+            </div>
+            <div class="threat_content" id="tabs-3">
+              <img src="images/blank.jpg">
+              <h2>Climate Change</h2>
+              <p>Info about benefit here</p>
+            </div>
+            <div class="threat_content" id="tabs-4">
+              <img src="images/blank.jpg">
+              <h2>Destruction</h2>
+              <p>Info about benefit here</p>
+            </div>
+
+            <ul id="threats_tab">
+              <li><a href="#tabs-1">Over Fishing</a></li>
+              <li><a href="#tabs-2">Pollution</a></li>
+              <li><a href="#tabs-3">Climate Change</a></li>
+              <li><a href="#tabs-4">Destruction</a></li>
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="section" id="section7">
+            <div class="intro">
+                <h1>Coral Restoration</h1>
+            </div>
+        </div>
+
+
+    </div>
+    <script src="js/jquery.event.move.js"></script>
+    <script src="js/jquery.twentytwenty.js"></script>
+    <script>
+    $(window).load(function() {
+      $("#image_slider").twentytwenty();
+    });
+    </script>
+    <script type="text/javascript" src="js/slick.js"></script>
+    <script>
+      $('.coral_types').slick({
+        infinite: true,
+        slidesToShow: 3,
+        slidesToScroll: 1
+      });
+    </script>
+
+
+  </body>
 </html>
-
